Fix tag visibility in relation graph #1011 (#1012)

--- a/mwdb/web/src/styles/index.css
+++ b/mwdb/web/src/styles/index.css
@@ -401,6 +401,16 @@ a.blob {
 .not-expanded-node > g.label:hover {
     transform: scale(1.1);
 }
+/* Relation graph */
+
+.dagre-d3 .tag {
+    max-width: 100%;
+}
+
+.dagre-d3 .tag span {
+    white-space: pre-wrap;
+    width: 100%;
+}
 
 /* react-modal css fix */
 .ReactModal__Overlay {
